objects/EPPA_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>BODY__c</fullName>
        <label>BODY</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOLT_SIDE_1__c</fullName>
        <label>BOLT  SIDE 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOLT_SIDE_2__c</fullName>
        <label>BOLT  SIDE 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bolt_Part_Number__c</fullName>
        <label>Bolt Part Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bolt_Wax_Part_Number__c</fullName>
        <label>Bolt Wax Part Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catalog__c</fullName>
        <label>Catalog Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claypack_Quantity__c</fullName>
        <label>Claypack Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Connductor_OD_2__c</fullName>
        <label>Connductor OD 2</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Connductor_OD__c</fullName>
        <label>Connductor OD</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Connector_Type__c</fullName>
        <label>Connector Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dwg_Reference__c</fullName>
        <label>Dwg Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inhibitor__c</fullName>
        <label>Inhibitor</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insulation_OD_2__c</fullName>
        <label>Insulation OD 2</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insulation_OD__c</fullName>
        <label>Insulation OD</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_Bolts_per_Connector__c</fullName>
        <label>Qty Bolts per Connector</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RPN__c</fullName>
        <label>RPN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TYCO_PN__c</fullName>
        <label>TYCO PN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thread_Size__c</fullName>
        <label>Thread Size</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>EPPA Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Insulation_OD__c</columns>
        <columns>Connductor_OD__c</columns>
        <columns>Length__c</columns>
        <columns>TYCO_PN__c</columns>
        <columns>RPN__c</columns>
        <columns>Catalog__c</columns>
        <columns>Dwg_Reference__c</columns>
        <columns>BODY__c</columns>
        <columns>Connector_Type__c</columns>
        <columns>Insulation_OD_2__c</columns>
        <columns>Connductor_OD_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EPPA-{00000}</displayFormat>
        <label>EPPA Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EPPA Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>